delete Team Employee working

--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -483,10 +483,10 @@
                     headers: {
                         "Content-Type": "application/json"
                     },
-                    body: JSON.stringify([{
+                    body: JSON.stringify({
                         team_id: teamId,
                         employee_id: employeeId
-                    }])
+                    })
                 })
                     .then(response => {
                         if (response.ok) {
