--- a/GUI/022_externalOV.html
+++ b/GUI/022_externalOV.html
@@ -144,7 +144,7 @@
         ]
     });
 
-            fetch("https://cioban.de/api/employee")
+            fetch("https://cioban.de/api/external")
     .then(response => {
         if (!response.ok) {
             throw new Error('Network response was not ok');
