--- a/GUI/021_internalOV.html
+++ b/GUI/021_internalOV.html
@@ -143,7 +143,7 @@
         ]
     });
 
-            fetch("https://cioban.de/api/employee")
+            fetch("https://cioban.de/api/internal")
     .then(response => {
         if (!response.ok) {
             throw new Error('Network response was not ok');
