--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -455,7 +455,7 @@
                 var teamId = document.getElementById("teamDropdown").value;
 
 
-                console.log(assignedFte);
+                console.log(assignedFte.value);
                 console.log([{ team_id: teamId, employee_id: employeeId, assigned_fte: assignedFte.value }]);
 
                 try {
