--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -362,6 +362,7 @@
                 var assignedFte = document.createElement("input");
                 assignedFte.type = "text";
                 assignedFte.placeholder = "FTE";
+                assignedFte.id="assignedFte"
                 eingabefelderDiv.appendChild(assignedFte);
 
                 var applyButton = document.createElement("button");
