--- a/GUI/03_projectsOV.html
+++ b/GUI/03_projectsOV.html
@@ -455,14 +455,10 @@
                 var assignedFte = document.getElementById("assignedFte");
                 var teamId = document.getElementById("teamDropdown").value;
 
-
-                console.log(assignedFte.value);
-                console.log([{ team_id: teamId, employee_id: employeeId, assigned_fte: assignedFte.value }]);
-
                 try {
                     var response = await fetch(`https://cioban.de/api/team/employee/`, {
                         method: "POST",
-                        body: JSON.stringify([{ team_id: teamId, employee_id: employeeId, assigned_fte: assignedFte.value }]),
+                        body: JSON.stringify({ team_id: teamId, employee_id: employeeId, assigned_fte: assignedFte.value }),
                         headers: {
                             "Content-Type": "application/json",
                         },
@@ -498,7 +494,8 @@
                     },
                     body: JSON.stringify({
                         team_id: teamId,
-                        employee_id: employeeId
+                        employee_id: employeeId,
+                        assigned_fte: 0
                     })
                 })
                     .then(response => {
