--- a/GUI/02_personalOV.html
+++ b/GUI/02_personalOV.html
@@ -200,7 +200,7 @@
                 element.employee_id,
                 element.first_name,
                 element.last_name,
-                element.free_fte,
+                element.free_fte.toFixed(2),
                 element.e_mail,
                 element.phone_number,
                 element.entry_date, 
